# AIBuilderPath

./: .gitignore
Lesson-1/Task-1/: README.md
Lesson-1/Task-1/Outputs/: claude.json  gemini.json  openai.json  phi3.json
Lesson-1/Task-1/Questions/: appdev_questions.txt  data_questions.txt  devops_questions.txt
Lesson-1/Task-2/: README.md
Lesson-1/Task-2/Context/: coding-standards.md  infra-troubleshooting.md  product-faq.md  schema-rules.md
Lesson-1/Task-3/: README.md  main.py  pyproject.toml  rag_chunks.json  rag_index.faiss
Lesson-1/Task-3/data/: data.txt
Lesson-1/Task-3/embeddings/: embedding.py  model.py
Lesson-1/Task-3/llm/: model.py  query.py
Lesson-1/Task-3/preprocessing/: chunker.py  pdf_to_text_extractor.py
Lesson-1/Task-4/: .env.example  .gitignore  README.md  app.py  ingest.py  pyproject.toml
Lesson-1/Task-4/.streamlit/: config.toml
Lesson-1/Task-4/data/: northwind_handbook.md  northwind_products.md
Lesson-1/Task-4/rag/: __init__.py  chunker.py  config.py  embeddings.py  llm.py  loaders.py  pipeline.py  retriever.py  vector_store.py
Lesson-2/Task-1/: README.md  pyproject.toml  run_comparison.py  scenarios.py
Lesson-2/Task-1/outputs/: basic.json  cot.json  refined.json
Lesson-2/Task-1/prompts/: basic_prompt.txt  (+2 more)
Lesson-2/Task-2/: README.md  pyproject.toml  run_comparison.py
Lesson-3/Task-2/: README.md
Lesson-4/: README.md
Lesson-4/Task-1/: .env.example  .gitignore  config.py  ingest.py  main.py  pyproject.toml
Lesson-4/Task-1/agent/: __init__.py  research_agent.py
Lesson-4/Task-1/data/hr_policies/: ai_data_handling_policy.md  code_of_conduct.md  remote_work_policy.md
Lesson-4/Task-1/data/insurance/: product_overview.md  q1_marketing_customer_feedback.md
Lesson-4/Task-1/mcp_server/: google_docs_server.py
Lesson-4/Task-1/tools/: mcp_docs_tool.py  rag_tool.py  web_search_tool.py
Lesson-5/Task-1/: README.md  agents.py  graph.py  main.py  pyproject.toml  tools.py
Lesson-5/Task-1/mock_data/: finance_docs.txt  it_docs.txt
(+6 files in other folders)
