[project]
name = "task-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.17",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "pymupdf>=1.27.2.3",
    "sentence-transformers>=5.4.1",
]
