[project]
name = "task-4"
version = "0.1.0"
description = "RAG chatbot from scratch (no LangChain/LlamaIndex) with switchable Ollama/Azure/Claude backends and a Streamlit UI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.40.0",
    "openai>=2.36.0",
    "anthropic>=0.40.0",
    "numpy>=2.0.0",
    "pymupdf>=1.27.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]
