[project]
name = "presidio-research-agent"
version = "0.1.0"
description = "Internal Research Agent for Presidio — LangChain agent with MCP (Google Docs), RAG (HR policies), and web search tools."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.17",
    "langchain-community>=0.4.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-ollama>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "faiss-cpu>=1.13.2",
    "duckduckgo-search>=8.0.0",
    "tavily-python>=0.7.0",
    "google-api-python-client>=2.160.0",
    "google-auth>=2.38.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.27.0",
    "requests>=2.32.0",
    "ddgs>=9.14.4",
]
