[project]
name = "lesson-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
    "wikipedia>=1.4.0",
]
